# calculatortest

./: CMakeLists.txt  Jenkinsfile  Makefile
include/: operations.h
src/: addition.cpp  division.cpp  main.cpp  multiplication.cpp  subtraction.cpp
tests/: test_driver.cpp
